refactor(egi): description impactante 3 axes excellence, Conception 3D + Mise en plan technique, capabilities Simulation FEM - traductions 5 langues

--- a/src/i18n/locales/ar/expertises.json
+++ b/src/i18n/locales/ar/expertises.json
@@ -27,19 +27,18 @@
       "id": "egi",
       "name": "EGI",
       "tagline": "مكتب الدراسات والهندسة",
-      "description": "تقدم EGI خبرتها في التصميم التقني وحسابات الهياكل وتطوير الحلول المخصصة. مكتب دراساتنا يرافق عملاءنا من الفكرة الأولية حتى التحقق من المنتج النهائي.",
+      "description": "تحوّل EGI دفاتر الشروط إلى حلول تقنية محسّنة. من التحليل الوظيفي إلى بدء الإنتاج، يتقن مكتب دراساتنا المتكامل سلسلة التصميم الميكانيكي بالكامل.",
       "expertise": [
-        "التصميم الميكانيكي والدراسات التقنية",
-        "النمذجة ثلاثية الأبعاد والمحاكاة (CAD/CAM)",
-        "حسابات الهياكل ومقاومة المواد",
-        "مخططات التنفيذ والوثائق التقنية",
-        "الهندسة العكسية وتحسين المنتجات",
-        "المرافقة في الشهادات والاعتماد"
+        "تصميم ثلاثي الأبعاد بارامتري (CATIA V5, SolidWorks)",
+        "رسم تقني وتحديد الأبعاد الوظيفية",
+        "حسابات الهياكل بالعناصر المحدودة (FEM)",
+        "تصميم ثلاثي الأبعاد",
+        "رسم تقني"
       ],
       "capabilities": {
         "capacity": "مكتب دراسات متكامل",
-        "precision": "برامج CAD من الجيل الأخير",
-        "machines": "SolidWorks, CATIA V5"
+        "precision": "محاكاة بالعناصر المحدودة",
+        "machines": "CATIA V5 / SolidWorks"
       },
       "certifications": ["خبرة معتمدة", "اعتماد Airbus", "طرق APQP"],
       "ctaLabel": "اكتشف EGI"
