refactor(frem): retirer chiffres, Intervention rapide + Grande reactivite + Interchangeabilite, ton dynamique - traductions 5 langues

--- a/src/i18n/locales/ar/expertises.json
+++ b/src/i18n/locales/ar/expertises.json
@@ -47,19 +47,19 @@
       "id": "frem",
       "name": "FREM",
       "tagline": "الصيانة الصناعية والتركيب",
-      "description": "تضمن FREM الصيانة الوقائية والعلاجية، وتركيب المعدات في الموقع والدعم التقني. يتدخل فريقنا لدى عملائنا لضمان توفر وأداء معداتهم.",
+      "description": "تضمن FREM الصيانة الوقائية والعلاجية بأقصى استجابة. يتدخل فريقنا المتنقل بسرعة لدى عملائنا لضمان توفر وأداء معداتهم الصناعية.",
       "expertise": [
-        "الصيانة الوقائية والعلاجية للمعدات الصناعية",
-        "التركيب والتشغيل في الموقع",
-        "الدعم التقني والإصلاح الطارئ",
-        "الفحوصات الدورية والتحققات التنظيمية",
-        "تدريب فرق التشغيل",
-        "عقود صيانة مخصصة"
+        "الصيانة الوقائية والعلاجية",
+        "تدخل سريع في الموقع",
+        "استجابة عالية",
+        "قابلية تبادل المكونات",
+        "إصلاح طارئ",
+        "دعم تقني مستمر"
       ],
       "capabilities": {
-        "capacity": "توفر 7/7",
-        "precision": "تدخل في 48 ساعة",
-        "machines": "فرق متنقلة"
+        "capacity": "تدخل سريع",
+        "precision": "استجابة عالية",
+        "machines": "قابلية التبادل"
       },
       "certifications": ["فنيون معتمدون", "تأهيلات كهربائية", "CACES"],
       "ctaLabel": "اكتشف FREM"
