--- a/src/i18n/locales/en/expertises.json
+++ b/src/i18n/locales/en/expertises.json
@@ -55,19 +55,19 @@
       "id": "frem",
       "name": "FREM",
       "tagline": "Industrial maintenance & installation",
-      "description": "FREM delivers preventive and corrective maintenance, on-site equipment installation and technical support. Our teams work at client facilities to ensure equipment availability and performance.",
+      "description": "FREM delivers preventive and corrective maintenance with maximum responsiveness. Our mobile team intervenes rapidly at client sites to ensure equipment availability and performance.",
       "expertise": [
-        "Preventive and corrective industrial equipment maintenance",
-        "On-site installation and commissioning",
-        "Technical support and emergency troubleshooting",
-        "Periodic inspections and regulatory compliance checks",
-        "Operations team training",
-        "Custom maintenance contracts"
+        "Preventive and corrective maintenance",
+        "Rapid on-site intervention",
+        "High responsiveness",
+        "Component interchangeability",
+        "Emergency troubleshooting",
+        "Continuous technical support"
       ],
       "capabilities": {
-        "capacity": "7-day availability",
-        "precision": "48h response time",
-        "machines": "Mobile teams"
+        "capacity": "Rapid intervention",
+        "precision": "High responsiveness",
+        "machines": "Interchangeability"
       },
       "certifications": [
         "Certified technicians",
