refactor(mgp): Usinage 3-5 axes + Peinture + Assemblage, garder Mise en charge, supprimer Tournage/Fraisage, retirer chiffres - traductions 5 langues

--- a/src/i18n/locales/ar/expertises.json
+++ b/src/i18n/locales/ar/expertises.json
@@ -68,19 +68,19 @@
       "id": "mgp",
       "name": "MGP",
       "tagline": "الصفائح المعدنية والحدادة والتجميع",
-      "description": "تكمل MGP عرض المجموعة بكفاءاتها في الصفائح المعدنية والحدادة واللحام وتجميع العناصر الميكانيكية. مقرها في Saint-Bauzille-de-Putois، تقدم MGP خبرة تكميلية في أسواق متنوعة مع 50 عاماً من الخبرة.",
+      "description": "تكمل MGP عرض المجموعة بكفاءاتها في الصفائح المعدنية والحدادة واللحام وتجميع العناصر الميكانيكية. خبرة تكميلية في أسواق متنوعة.",
       "expertise": [
-        "القطع بنفث الماء عالي الضغط",
+        "تصنيع من 3 إلى 5 محاور",
         "الحدادة وتشكيل المعادن",
         "اللحام بجميع العمليات (TIG, MIG, ARC)",
-        "التصنيع",
-        "الخراطة",
-        "التفريز"
+        "الطلاء",
+        "التجميع",
+        "اختبار التحميل"
       ],
       "capabilities": {
-        "capacity": "2000م² من الورشة",
-        "precision": "8 لحامين مؤهلين",
-        "machines": "ليزر، مكبس ثني، لفافة"
+        "capacity": "تصنيع من 3 إلى 5 محاور",
+        "precision": "اختبار التحميل",
+        "machines": "أسطول آلات CNC"
       },
       "certifications": ["ISO 9001", "لحامون معتمدون EN 287", "علامة CE"],
       "ctaLabel": "اكتشف MGP"
