refactor(aerotools): retirer chiffres, Ergonomie + Livraison rapide + Certifie CE, section video placeholder - traductions 5 langues

--- a/src/i18n/locales/ar/expertises.json
+++ b/src/i18n/locales/ar/expertises.json
@@ -89,19 +89,19 @@
       "id": "aerotools",
       "name": "LLEDO Aerotools",
       "tagline": "معدات GSE للمروحيات",
-      "description": "قسم مخصص لتطوير وتسويق معدات GSE (Ground Support Equipment) للمروحيات الخفيفة. قضبان السحب وعربات الرفع والأدوات المتخصصة المتوافقة مع المعايير الجوية.",
+      "description": "قسم مخصص لتطوير وتسويق معدات GSE (Ground Support Equipment) للمروحيات الخفيفة. تصميم مريح محسّن، توصيل سريع ومطابقة مضمونة.",
       "expertise": [
-        "قضبان سحب معتمدة EN 12312 وEN 1915",
-        "عربات رفع ومناولة المروحيات",
-        "أدوات متخصصة لصيانة الدوار",
-        "معدات مخصصة حسب مواصفات العميل",
-        "تدريب على استخدام المعدات",
-        "دعم تقني وخدمة ما بعد البيع"
+        "قضبان سحب معتمدة",
+        "تصميم مريح ومناولة بديهية",
+        "توصيل سريع",
+        "معدات مخصصة",
+        "مطابقة CE مضمونة",
+        "دعم تقني سريع الاستجابة"
       ],
       "capabilities": {
-        "capacity": "مجموعة كاملة GSE للمروحيات",
-        "precision": "اختبار 1.25× CMU",
-        "machines": "شهادة CE والطيران"
+        "capacity": "مجموعة كاملة GSE",
+        "precision": "تصميم مريح محسّن",
+        "machines": "شهادة CE"
       },
       "certifications": ["توجيه الآلات 2006/42/CE", "EN 12312", "EN 1915"],
       "ctaLabel": "اكتشف LLEDO Aerotools"
