--- a/src/i18n/locales/en/expertises.json
+++ b/src/i18n/locales/en/expertises.json
@@ -105,19 +105,19 @@
       "id": "aerotools",
       "name": "LLEDO Aerotools",
       "tagline": "Helicopter GSE equipment",
-      "description": "Division dedicated to developing and marketing GSE (Ground Support Equipment) for light helicopters. Towbars, lifting trolleys and specialized tooling compliant with aeronautical standards.",
+      "description": "Division dedicated to developing and marketing GSE (Ground Support Equipment) for light helicopters. Optimized ergonomics, fast delivery and guaranteed compliance.",
       "expertise": [
-        "EN 12312 and EN 1915 certified towbars",
-        "Helicopter lifting and handling trolleys",
-        "Specialized rotor maintenance tooling",
-        "Custom equipment per client specifications",
-        "Equipment operation training",
-        "Technical support and after-sales service"
+        "Certified towbars",
+        "Ergonomics and intuitive handling",
+        "Fast delivery",
+        "Custom equipment",
+        "Guaranteed CE compliance",
+        "Responsive technical support"
       ],
       "capabilities": {
-        "capacity": "Complete helicopter GSE range",
-        "precision": "1.25× SWL tested",
-        "machines": "CE and aeronautical certification"
+        "capacity": "Complete GSE range",
+        "precision": "Optimized ergonomics",
+        "machines": "CE certification"
       },
       "certifications": [
         "Machinery Directive 2006/42/EC",
