refactor(carriere): titre Participez a l'aventure LLEDO, avantages Cadre agreable + Ambiance chaleureuse, retirer Horaire flexible - traductions 5 langues

--- a/src/i18n/locales/ar/careers.json
+++ b/src/i18n/locales/ar/careers.json
@@ -2,8 +2,8 @@
   "title": "الوظائف - LLEDO Industries",
   "description": "انضموا إلى فريق LLEDO Industries وشاركوا في الابتكار في أدوات الطيران. اكتشفوا فرص العمل لدينا.",
   "hero": {
-    "badge": "انضم إلى المغامرة",
-    "title": "الوظائف في LLEDO Industries",
+    "badge": "انضم إلينا",
+    "title": "شارك في مغامرة LLEDO",
     "subtitle": "انضموا إلى فريق شغوف وشاركوا في الابتكار في أدوات الطيران ومعدات GSE."
   },
   "stats": {
