--- a/src/i18n/locales/en/careers.json
+++ b/src/i18n/locales/en/careers.json
@@ -2,8 +2,8 @@
   "title": "Careers - LLEDO Industries",
   "description": "Join the LLEDO Industries team and participate in aerospace tooling innovation. Discover our job opportunities.",
   "hero": {
-    "badge": "Join the adventure",
-    "title": "Careers at LLEDO Industries",
+    "badge": "Join us",
+    "title": "Join the LLEDO adventure",
     "subtitle": "Join a passionate team and participate in aerospace tooling and GSE equipment innovation."
   },
   "stats": {
