--- a/src/i18n/locales/fr/careers.json
+++ b/src/i18n/locales/fr/careers.json
@@ -2,8 +2,8 @@
   "title": "Carrières - LLEDO Industries",
   "description": "Rejoignez l'équipe LLEDO Industries et participez à l'innovation dans l'outillage aéronautique. Découvrez nos offres d'emploi.",
   "hero": {
-    "badge": "Rejoignez l'aventure",
-    "title": "Carrières chez LLEDO Industries",
+    "badge": "Rejoignez-nous",
+    "title": "Participez à l'aventure LLEDO",
     "subtitle": "Rejoignez une équipe passionnée et participez à l'innovation dans l'outillage aéronautique et les équipements GSE."
   },
   "stats": {
