--- a/src/i18n/locales/pt-BR/careers.json
+++ b/src/i18n/locales/pt-BR/careers.json
@@ -2,8 +2,8 @@
   "title": "Carreiras - LLEDO Industries",
   "description": "Junte-se à equipe da LLEDO Industries e participe da inovação em ferramental aeronáutico. Descubra nossas oportunidades de emprego.",
   "hero": {
-    "badge": "Junte-se à aventura",
-    "title": "Carreiras na LLEDO Industries",
+    "badge": "Junte-se a nós",
+    "title": "Participe da aventura LLEDO",
     "subtitle": "Junte-se a uma equipe apaixonada e participe da inovação em ferramental aeronáutico e equipamentos GSE."
   },
   "stats": {
