--- a/src/i18n/locales/es/careers.json
+++ b/src/i18n/locales/es/careers.json
@@ -2,8 +2,8 @@
   "title": "Empleo - LLEDO Industries",
   "description": "Únase al equipo de LLEDO Industries y participe en la innovación del utillaje aeronáutico. Descubra nuestras ofertas de empleo.",
   "hero": {
-    "badge": "Únase a la aventura",
-    "title": "Empleo en LLEDO Industries",
+    "badge": "Únase a nosotros",
+    "title": "Participe en la aventura LLEDO",
     "subtitle": "Únase a un equipo apasionado y participe en la innovación del utillaje aeronáutico y los equipos GSE."
   },
   "stats": {
