feat(admin): add admin management page with invite modal

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -255,7 +255,8 @@
     "applications": "الطلبات",
     "blog": "المدونة",
     "mediaLibrary": "مكتبة الوسائط",
-    "reviews": "آراء العملاء"
+    "reviews": "آراء العملاء",
+    "admins": "المسؤولون"
   },
   "certifications": {
     "ce": "علامة CE",
