--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -255,7 +255,8 @@
     "applications": "Applications",
     "blog": "Blog",
     "mediaLibrary": "Media Library",
-    "reviews": "Client Reviews"
+    "reviews": "Client Reviews",
+    "admins": "Administrators"
   },
   "certifications": {
     "ce": "CE Marking",
