--- a/src/i18n/locales/pt-BR/common.json
+++ b/src/i18n/locales/pt-BR/common.json
@@ -255,7 +255,8 @@
     "applications": "Candidaturas",
     "blog": "Blog",
     "mediaLibrary": "Biblioteca de mídia",
-    "reviews": "Avaliações de clientes"
+    "reviews": "Avaliações de clientes",
+    "admins": "Administradores"
   },
   "certifications": {
     "ce": "Marcação CE",
